--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 
 .ipynb_checkpoints/Final Project Data (1)-checkpoint.ipynb
 Final Project Data (1).ipynb
+combined_labels_pictures.csv
+combined_labels_pictures2.csv
+combined_labels_pictures.csv
+combined_labels_pictures.csv
